test/spec_vectors/i32/fail/module_13.wat
(module (func $type-unary-operand-empty-in-local.set (local i32) (local.set 0 (i32.eqz)) (local.get 0) (drop)))